Fix: Correct CompanyServiceImpl method overrides